--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "axios": "1.2.0-alpha.1",
+    "d3-shape": "^1.3.5",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^9.9.5",
+    "react-native-wheel-of-fortune": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
